# pyspot

./: LICENSE.md  README.md  pyproject.toml
pyspot/: __init__.py  pyspot.py  pyspot.yaml  pyspot_PLATO_v2.py  pyspot_PLATO_v2_MOD.py  spotmodels.py
