[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspot"
version = "1.0.0"
authors = [
  {name="Geert Jan Talens", email="phys2523@ox.ac.uk" },

]
description = "Code to generate lightcurves of stars with spots."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pyspot = ["*.dat", "*.yaml"]

[project.scripts]
pyspot = "pyspot.pyspot.__main__:main"